--- a/frontend/vortex-frontend-apps/libs/features-lib/src/lib/features-lib/components/features-search-component/features-search.component.html
+++ b/frontend/vortex-frontend-apps/libs/features-lib/src/lib/features-lib/components/features-search-component/features-search.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="font-medium mt-1 w-full p-10">
         <div class="">
-          <button class="text-sm bg-gray-800 hover:bg-gray-400 text-white rounded-md px-3 py-2" (click)="doAll()">Show all Features</button>
+          <button class="text-sm bg-gray-800 hover:bg-gray-400 text-white rounded-md px-3 py-2" (click)="doFeaturesByApp()">Show all Features</button>
           &#160;
           <button class="text-sm bg-gray-800 hover:bg-gray-400 text-white rounded-md px-3 py-2" (click)="doAddNewFeature()">Add New Feature</button>
         </div>
