--- a/frontend/vortex-frontend-apps/apps/scheduler/src/app/app.component.html
+++ b/frontend/vortex-frontend-apps/apps/scheduler/src/app/app.component.html
@@ -4,7 +4,7 @@
       <div class="flex h-16 items-center justify-between">
         <div class="flex items-center">
           <div class="flex-shrink-0">
-            <img (click)="go('/')" src="../assets/images/logo.png" [border]="0" width="50   " height="50"/>
+            <img (click)="go('/')" src="assets/images/logo.png" [border]="0" width="50   " height="50"/>
           </div>
           <div class="hidden md:block">
             <div class="ml-10 flex items-baseline space-x-4">
